--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.4.0",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "10.4.5",
         "axios": "^0.21.4",
         "laravel-mix": "^6.0.43",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "postcss-import": "^14.0.2",
         "tailwindcss": "^3.0.18"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.4.17"
     }
 }
